--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,5 +1,5 @@
 <div>
   <% @students.each do |student| %>
-    <div><h1><%=student.first_name</h1> + " " + student.last_name %></div>
+    <div><%= student.first_name + " " + student.last_name %></div>
   <% end %>
 </div>
